syntax = "proto3";

option go_package = "genprotos/";

package transaction;


service TransactionService {
    rpc CreateTransaction(CreateTransactionRequest) returns(CreateTransactionResponse){}
    rpc UpdateTransaction(UpdateTransactionRequest) returns(UpdateTransactionResponse){}
    rpc DeleteTransaction(DeleteTransactionRequest) returns(DeleteTransactionResponse){}
    rpc GetTransaction(GetTransactionRequest)returns(GetTransactionResponse){}
    rpc ListTransactions(ListTransactionsRequest) returns(ListTransactionsResponse){}
    rpc Spending(SpendingRequest)returns(SpendingResponse){}
    rpc Income(IncomeRequest) returns(IncomeResponse){}
}

message CreateTransactionRequest{
    Transaction transaction = 1;
}

message CreateTransactionResponse{}

message Transaction{
    string id = 1;
    string user_id = 2;
    string account_id = 3;
    string category_id = 4;
    float amount = 5;
    string type = 6;
    string description = 7;
    string date = 8;
}

message UpdateTransactionRequest{
    Transaction transaction = 1;
}

message UpdateTransactionResponse{}


message GetTransactionRequest{
    string id = 1;
}

message GetTransactionResponse{
    Transaction transaction = 1;
}

message DeleteTransactionRequest{
    string id = 1;
}

message DeleteTransactionResponse{}

message ListTransactionsRequest{
    int32 limit = 1;
    int32 page = 2;
}

message ListTransactionsResponse{
    repeated Transaction transactions = 1;
}

message SpendingRequest{
    string user_id = 1;
}

message SpendingResponse{
    int32 spending_count = 1;
    float spending_money = 2;
}

message IncomeRequest{
    string user_id = 1;
}

message IncomeResponse{
    int32 income_count = 1;
    float income_money = 2; 
}